--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/async-storage": "^1.12.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.8.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-firebase": "^5.6.0",
+    "react-native-gifted-chat": "^1.0.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
